--- a/ControllerConvertStringToLocalDateTimeExample/build.gradle
+++ b/ControllerConvertStringToLocalDateTimeExample/build.gradle
@@ -1,23 +1,29 @@
-plugins {
-	id 'org.springframework.boot' version '2.7.1'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
+buildscript {
+	ext {
+		springBootVersion = '2.1.7.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-group = 'com.woony'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+group 'com.woony'
+version '1.0-SNAPSHOT'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.projectlombok:lombok:1.18.22'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
+	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.projectlombok:lombok')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
